--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ autopep8==2.0.0
 Babel==2.9.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
-eng-unit-converter==0.0.0
+git+https://github.com/ead3471/eng_unit_converter.git
 flake8==6.0.0
 frozenlist==1.3.3
 idna==3.4
